// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Call to Action block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-cta ugb-cta ugb--background-opacity-2 ugb-cta--design-design ugb--shadow-1 ugb--has-background ugb--has-background-image className"
  style={
    Object {
      "--ugb-background-color": "#123456",
      "backgroundAttachment": "fixed",
      "backgroundColor": "#123456",
      "backgroundImage": "url(backgroundImageURL)",
      "borderRadius": 6,
    }
  }
>
  <div
    className="ugb-content-wrapper"
  >
    <h3
      className="ugb-cta__title"
      style={
        Object {
          "color": "#123456",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "ctaTitle",
          }
        }
      />
    </h3>
    <p
      className="ugb-cta__description"
      style={
        Object {
          "color": "#123456",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "bodyText",
          }
        }
      />
    </p>
    <div>
      <a
        className="ugb-button ugb-button--align-center ugb-button--size-size ugb-button--design-buttonDesign ugb-button--has-icon"
        href="url"
        style={
          Object {
            "backgroundColor": "#123456",
            "borderColor": undefined,
            "borderRadius": "2px",
            "color": "#123456",
          }
        }
        target="_blank"
      >
        <span
          className="ugb-button--inner"
          style={
            Object {
              "color": "#123456",
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "buttonText",
              }
            }
          />
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Call to Action block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-cta ugb-cta ugb--background-opacity-5"
  style={
    Object {
      "--ugb-background-color": undefined,
      "backgroundAttachment": undefined,
      "backgroundColor": undefined,
      "backgroundImage": undefined,
      "borderRadius": undefined,
    }
  }
>
  <div
    className="ugb-content-wrapper"
  >
    <h3
      className="ugb-cta__title"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Title for This Block",
          }
        }
      />
    </h3>
    <p
      className="ugb-cta__description"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for this block. Use this space for describing your block. Any text will do.",
          }
        }
      />
    </p>
    <div>
      <a
        className="ugb-button ugb-button--align-center ugb-button--size-normal"
        href=""
        style={
          Object {
            "backgroundColor": undefined,
            "borderColor": undefined,
            "borderRadius": "4px",
            "color": "#ffffff",
          }
        }
      >
        <span
          className="ugb-button--inner"
          style={
            Object {
              "color": "#ffffff",
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Button text",
              }
            }
          />
        </span>
      </a>
    </div>
  </div>
</div>
`;
